<resources>
    <string name="app_name">DompetMahasiswa</string>
    <string name="tv_pemasukan">Pemasukan</string>
    <string name="tv_pengeluaran">Pengeluaran</string>
    <string name="tv_Saldo">Saldo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_transaction">Tidak ada transaksi</string>
    <string name="tv_rp">Rp.</string>
    <string name="hint_note">Note</string>
    <string name="hint_tanggal">Tanggal</string>
    <string name="menu_title_simpan">Simpan</string>
    <string name="hint_null_nominal">0</string>
    <string name="menu_title_dompet">Dompet</string>
    <string name="tv_no_wallet">Anda tidak mempunyai wallet</string>
    <string name="tv_no_wallet_2">Silahkan klik tombol + untuk membuat wallet</string>
    <string name="activity_title_wallet">Pilih Wallet</string>
    <string name="hint_nama_wallet">Nama Wallet</string>
    <string name="activity_title_add_wallet">Tambah Wallet</string>
    <string name="hint_wallet">Wallet</string>
    <string name="tv_no_income">Tidak ada pendapatan</string>
    <string name="tv_no_outcome">Tidak ada pengeluaran</string>
</resources>
